Add documentation for the get all articles endpoint
